--- a/public/style.css
+++ b/public/style.css
@@ -147,7 +147,15 @@
   padding: 0;
 }
 body {
-  background-color: black;
+  background-color: #0b0a35;
+  background: repeating-linear-gradient(
+      45deg,
+      #2b2b2b 0%,
+      #2b2b2b 10%,
+      #0b0a35 0%,
+      #0b0a35 50%
+    )
+    0 / 15px 15px;
   color: white;
   height: 100vh;
   /* animation: neonYellow 1s ease-in-out infinite alternate; */
