--- a/public/style.css
+++ b/public/style.css
@@ -91,14 +91,12 @@
 }
 @keyframes neonGreen {
   from {
-    box-shadow: inset 0 0 10px #ffffff7a, inset 0 0 20px #ffffff7a,
-      0 0 30px #ffffff7a, inset 0 0 40px #00ff0086, inset 0 0 30px #00ff0086,
-      0 0 40px #00ff0086, 0 0 60px #00ff0086, 0 0 110px #00ff0086;
+    box-shadow: inset 0 0 0px #ffffff7a, inset 0 0 2px #ffffff7a, 0 0 4px #ffffff7a, inset 0 0 12px #00ff0086,
+    inset 0 0 14px #00ff0086, 0 0 5px #00ff0086, 0 0 5px #00ff0086, 0 0 10px #00ff0086;
   }
   to {
-    box-shadow: inset 0 0 5px #ffffff7a, inset 0 0 10px #ffffff7a,
-      0 0 15px #ffffff7a, inset 0 0 20px #00ff0086, inset 0 0 15px #00ff0086,
-      0 0 20px #00ff0086, 0 0 30px #00ff0086, 0 0 55px #00ff0086;
+    box-shadow: inset 0 0 2px #ffffff7a, inset 0 0 5px #ffffff7a, 0 0 7px #ffffff7a, inset 0 0 15px #00ff0086,
+    inset 0 0 20px #00ff0086, 0 0 10px #00ff0086, 0 0 15px #00ff0086, 0 0 20px #00ff0086;
   }
 }
 @keyframes neonPink {
@@ -125,6 +123,7 @@
       0 0 20px #ff114d88, 0 0 30px #ff114d88, 0 0 55px #ff114d88;
   }
 }
+
 @keyframes neonRedText {
   from {
     text-shadow: 0 0 10px #ffffff7a, 0 0 20px #ffffff7a, 0 0 30px #ffffff7a,
