--- a/public/style.css
+++ b/public/style.css
@@ -2,25 +2,8 @@
   font-family: 'Beon Medium';
   font-style: normal;
   font-weight: normal;
-  src: local('Beon Medium'), url('fonts/beon-webfont.woff') format('woff');
-}
-@font-face {
-  font-family: 'Beon Medium';
-  font-style: normal;
-  font-weight: normal;
   src: local('Beon Medium'), url('fonts/Beon.woff') format('woff');
 }
-/* latin-ext */
-@font-face {
-  font-family: 'Vampiro One';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/vampiroone/v13/gokqH6DoDl5yXvJytFsdLnquuPl4og.woff2)
-    format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
-    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
 @font-face {
   font-family: 'Vampiro One';
   font-style: normal;
@@ -53,7 +36,7 @@
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
-@keyframes neonBlue {
+@keyframes neon-blue {
   from {
     box-shadow: inset 0 0 6px #ffffff7a, inset 0 0 12px #ffffff7a,
       0 0 18px #ffffff7a, inset 0 0 40px #228dff7a, inset 0 0 50px #228dff7a,
@@ -65,7 +48,8 @@
       0 0 30px #228dff7a, 0 0 45px #228dff7a, 0 0 65px #228dff7a;
   }
 }
-@keyframes neonYellow {
+
+@keyframes neon-yellow {
   from {
     box-shadow: inset 0 0 1px #ffffff7a, inset 0 0 2px #ffffff7a,
       0 0 3px #ffffff7a, inset 0 0 1px #ffdd1b86, inset 0 0 2px #ffdd1b86,
@@ -77,19 +61,7 @@
       0 0 30px #ffdd1b86, 0 0 0px #ffdd1b86;
   }
 }
-@keyframes neon-text {
-  from {
-    text-shadow: 0 0 10px #ffffff7a, 0 0 20px #ffffff7a, 0 0 30px #ffffff7a,
-      0 0 40px #ff00dd7a, 0 0 70px #ff00dd7a, 0 0 80px #ff00dd7a,
-      0 0 100px #ff00dd7a, 0 0 150px #ff00dd7a;
-  }
-  to {
-    text-shadow: 0 0 5px #ffffff7a, 0 0 10px #ffffff7a, 0 0 15px #ffffff7a,
-      0 0 20px #ff00dd7a, 0 0 35px #ff00dd7a, 0 0 40px #ff00dd7a,
-      0 0 50px #ff00dd7a, 0 0 75px #ff00dd7a;
-  }
-}
-@keyframes neonGreen {
+@keyframes neon-green {
   from {
     box-shadow: inset 0 0 0px #ffffff7a, inset 0 0 2px #ffffff7a,
       0 0 4px #ffffff7a, inset 0 0 12px #00ff0086, inset 0 0 14px #00ff0086,
@@ -101,7 +73,19 @@
       0 0 10px #00ff0086, 0 0 15px #00ff0086, 0 0 20px #00ff0086;
   }
 }
-@keyframes neonPink {
+@keyframes neon-red {
+  from {
+    box-shadow: inset 0 0 0px #ffffff7a, inset 0 0 2px #ffffff7a,
+      0 0 4px #ffffff7a, inset 0 0 12px #ff114d88, inset 0 0 14px #ff114d88,
+      0 0 5px #ff114d88, 0 0 5px #ff114d88, 0 0 10px #ff114d88;
+  }
+  to {
+    box-shadow: inset 0 0 2px #ffffff7a, inset 0 0 5px #ffffff7a,
+      0 0 7px #ffffff7a, inset 0 0 15px #ff114d88, inset 0 0 20px #ff114d88,
+      0 0 10px #ff114d88, 0 0 15px #ff114d88, 0 0 20px #ff114d88;
+  }
+}
+@keyframes neon-pink {
   from {
     box-shadow: inset 0 0 10px #ffffff7a, inset 0 0 20px #ffffff7a,
       0 0 30px #ffffff7a, inset 0 0 40px #ff00dd7a, inset 0 0 60px #ff00dd7a,
@@ -113,24 +97,33 @@
       0 0 35px #ff00dd7a, 0 0 45px #ff00dd7a, 0 0 60px #ff00dd7a;
   }
 }
-@keyframes neonRed {
-  from {
-    box-shadow: inset 0 0 10px #ffffff7a, inset 0 0 20px #ffffff7a,
-      0 0 30px #ffffff7a, inset 0 0 40px #ff114d88, inset 0 0 30px #ff114d88,
-      0 0 40px #ff114d88, 0 0 60px #ff114d88, 0 0 110px #ff114d88;
-  }
-  to {
-    box-shadow: inset 0 0 5px #ffffff7a, inset 0 0 10px #ffffff7a,
-      0 0 15px #ffffff7a, inset 0 0 20px #ff114d88, inset 0 0 15px #ff114d88,
-      0 0 20px #ff114d88, 0 0 30px #ff114d88, 0 0 55px #ff114d88;
-  }
-}
-
-@keyframes neonRedText {
+@keyframes neon-text-pink {
   from {
     text-shadow: 0 0 10px #ffffff7a, 0 0 20px #ffffff7a, 0 0 30px #ffffff7a,
-      0 0 40px #ff114d88, 0 0 70px #ff114d88, 0 0 80px #ff114d88,
-      0 0 100px #ff114d88, 0 0 150px #ff114d88;
+      0 0 40px #ff00dd7a, 0 0 70px #ff00dd7a, 0 0 80px #ff00dd7a,
+      0 0 100px #ff00dd7a, 0 0 150px #ff00dd7a;
+  }
+  to {
+    text-shadow: 0 0 5px #ffffff7a, 0 0 10px #ffffff7a, 0 0 15px #ffffff7a,
+      0 0 20px #ff00dd7a, 0 0 35px #ff00dd7a, 0 0 40px #ff00dd7a,
+      0 0 50px #ff00dd7a, 0 0 75px #ff00dd7a;
+  }
+}
+@keyframes neon-text-blue {
+  from {
+    text-shadow: 0 0 10px #ffffff7a, 0 0 20px #ffffff7a, 0 0 30px #ffffff7a,
+      0 0 40px #228dff7a, 0 0 70px #228dff7a, 0 0 80px #228dff7a,
+      0 0 100px #228dff7a, 0 0 150px #228dff7a;
+  }
+  to {
+    text-shadow: 0 0 5px #ffffff7a, 0 0 10px #ffffff7a, 0 0 15px #ffffff7a,
+      0 0 20px #228dff7a, 0 0 35px #228dff7a, 0 0 40px #228dff7a,
+      0 0 50px #228dff7a, 0 0 75px #228dff7a;
+  }
+}
+@keyframes neon-text-red-altered {
+  from {
+    text-shadow: 0 0 0px #ffffff7a;
   }
   to {
     text-shadow: 0 0 5px #ffffff7a, 0 0 10px #ffffff7a, 0 0 15px #ffffff7a,
@@ -159,11 +152,9 @@ body {
     0 / 15px 15px;
   color: white;
   height: 100vh;
-  /* animation: neonYellow 1s ease-in-out infinite alternate; */
   text-align: center;
   overflow: hidden;
 }
-
 .flex-center {
   display: flex;
   justify-content: center;
@@ -175,24 +166,30 @@ body {
 li {
   list-style-type: none;
 }
-
 #user-interface {
   margin: 0 auto;
   width: 1100px;
   height: 900px;
 }
 #start-page {
-  width: 800px;
-  height: 500px;
   background-image: url(../bgQuiz.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  border-radius: 30px;
-  display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  animation: neonBlue 2s ease-in-out infinite alternate;
+}
+#result-page {
+  justify-content: space-evenly;
+  align-items: center;
+}
+#start-page,
+#result-page {
+  width: 800px;
+  height: 500px;
+  border-radius: 30px;
+  display: flex;
+  animation: neon-blue 2s ease-in-out infinite alternate;
   transform: none;
 }
 .welcome-message {
@@ -200,7 +197,7 @@ li {
   font-family: 'Vampiro One';
   font-weight: 300;
   margin-bottom: 40px;
-  animation: neon-text 0.5s ease-in-out infinite alternate;
+  animation: neon-text-pink 0.5s ease-in-out infinite alternate;
 }
 #username-input {
   background-color: rgba(255, 255, 255, 0.05);
@@ -212,7 +209,7 @@ li {
   font-weight: bold;
   width: 200px;
   margin: 85px 20px;
-  animation: neonYellow 2s ease-in-out infinite alternate;
+  animation: neon-yellow 2s ease-in-out infinite alternate;
 }
 #start-quiz-btn {
   margin: 75px 40px;
@@ -233,7 +230,7 @@ button {
   font-family: 'Vampiro One';
   font-weight: 300;
   transition: transform 0.3s;
-  animation: neonPink 2s ease-in-out infinite alternate;
+  animation: neon-pink 2s ease-in-out infinite alternate;
 }
 button:hover {
   transform: scale(1.1);
@@ -251,7 +248,6 @@ button:hover {
   height: 430px;
   position: relative;
   display: flex;
-  /* justify-content: space-around; */
   align-items: center;
 }
 #stack-cards {
@@ -263,7 +259,7 @@ button:hover {
   font-family: 'Vampiro One';
   margin: 0 150px 20px 0;
   letter-spacing: 2px;
-  animation: neon-text 0.5s ease-in-out infinite alternate;
+  animation: neon-text-pink 0.5s ease-in-out infinite alternate;
 }
 
 .quiz-status {
@@ -283,10 +279,11 @@ button:hover {
   font-weight: bold;
   border-radius: 30px;
   text-align: center;
-  animation: neonBlue 2s ease-in-out infinite alternate;
+  animation: neon-blue 2s ease-in-out infinite alternate;
 }
 
 .title {
+  max-width: 90%;
   font-size: 1.2rem;
   margin-top: 30px;
 }
@@ -306,7 +303,7 @@ button:hover {
   padding: 0;
   box-shadow: none;
   background-color: rgba(0, 0, 0, 0.75);
-  animation: neonBlue 2s ease-in-out infinite alternate;
+  animation: neon-blue 2s ease-in-out infinite alternate;
 }
 .card2,
 .card4,
@@ -348,7 +345,8 @@ button:hover {
   align-items: center;
 }
 .answers-list li {
-  margin: 10px 50px;
+  width: 200px;
+  margin: 10px;
   padding: 5px 20px;
   border: 1px solid #ff9100;
   border-radius: 50px;
@@ -370,7 +368,6 @@ button:hover {
   grid-column: 2;
   grid-row: 2;
 }
-
 #references-container {
   width: 90%;
   display: flex;
@@ -393,16 +390,14 @@ button:hover {
   text-decoration: underline;
 }
 .correct-answer {
-  animation: neonGreen 2s ease-in-out infinite alternate;
+  animation: neon-green 2s ease-in-out infinite alternate;
 }
 .learn {
   margin-bottom: 15px;
 }
-
 .wrong-answer {
-  animation: neonRed 2s ease-in-out infinite alternate;
+  animation: neon-red 2s ease-in-out infinite alternate;
 }
-
 .progress-container {
   background-color: #ff10f0;
   /* height: 8px;
@@ -424,36 +419,30 @@ button:hover {
   width: 8px;
   border-radius: 5px;
 }
-
-#result-container {
-  width: 90%;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  animation: neonBlue 2s ease-in-out infinite alternate;
-  color: white;
-  padding: 10px;
-}
-
 .congrats-message {
-  font-family: Monoton;
-  font-size: 7rem;
-  color: #ff00de;
+  font-size: 2rem;
+  font-family: 'Vampiro One';
+  font-weight: 300;
+  margin: 30px auto;
+  animation: neon-text-pink 0.5s ease-in-out infinite alternate;
 }
-
 .score-message {
-  font-family: Iceland;
-  font-size: 5rem;
-  color: #228dff;
+  font-family: 'Budmo Jiggler';
+  font-size: 3rem;
+  font-weight: 300;
+  color: #e1f2f3;
+  animation: neon-text-blue 2s ease-in-out infinite alternate;
 }
-
 .total-score {
-  font-size: 7rem;
-  animation: neonRedText 2s ease-in-out infinite alternate;
+  font-family: 'Budmo Jigglis';
+  font-weight: 300;
+  font-size: 3rem;
+  animation: neon-text-red-altered 0.1s cubic-bezier(0.42, 1.88, 0.36, -2.26)
+    infinite alternate;
 }
-
+#finnish-quiz-btn {
+  margin: 30px auto;
+}
 @media screen and (max-width: 620px) {
   body {
     height: 95vh;
